visibility fix

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-  @media (max-width: 480px) {
+  @media (max-width: 180px) {
     .navbar.navbar-default ul {
       visibility: hidden;
     }
